website/versioned_docs/version-6.0.0-rc.0/component_usage/BottomSheet.mdx
<!-- To show the guide to configure the BottomSheet Component to a project.
This is not added as description in comments of the component so is added here. -->

**Note:**
Make sure that you have completed [Step 3](../installation#install-react-native-safe-area-context) in the setup guide before using `BottomSheet`.

Overlay Modal that displays content from the bottom of the screen.

**Note:** Bottom Sheet Supports [Safe Area View Props](https://appandflow.github.io/react-native-safe-area-context/api/safe-area-view). You can remove bottom safe area padding by adding prop `edges={{bottom: 'off'}}`.


```SnackPlayer name=RNE BottomSheet
import React, { useState } from 'react';
import { BottomSheet, Button, ListItem } from '@rn-vui/themed';
import { StyleSheet } from 'react-native';
import { SafeAreaProvider } from 'react-native-safe-area-context';

type BottomSheetComponentProps = {};

const BottomSheetComponent: React.FunctionComponent<BottomSheetComponentProps> = () => {
const [isVisible, setIsVisible] = useState(false);
const list = [
  { title: 'List Item 1' },
  { title: 'List Item 2' },
  {
    title: 'Cancel',
    containerStyle: { backgroundColor: 'red' },
    titleStyle: { color: 'white' },
    onPress: () => setIsVisible(false),
  },
];

return (
  <SafeAreaProvider>
    <Button
      title="Open Bottom Sheet"
      onPress={() => setIsVisible(true)}
      buttonStyle={styles.button}
    />
    <BottomSheet modalProps={{}} isVisible={isVisible}>
      {list.map((l, i) => (
        <ListItem
          key={i}
          containerStyle={l.containerStyle}
          onPress={l.onPress}
        >
          <ListItem.Content>
            <ListItem.Title style={l.titleStyle}>{l.title}</ListItem.Title>
          </ListItem.Content>
        </ListItem>
      ))}
    </BottomSheet>
  </SafeAreaProvider>
);
};

const styles = StyleSheet.create({
button: {
  margin: 10,
},
});

export default BottomSheetComponent;
```
